# ImWidget

./: .gitignore  ImMain.cpp  ImWidget.sln  ImWidget.vcxproj  ImWidget.vcxproj.filters  Install_Dependencies.bat  Install_Deps.bat  Install_Deps.sh  imgui.ini  main.cpp
Application/: ImApplication.cpp  ImApplication.h  ImPiApplication.cpp  ImPiApplication.h  ImWin64Application.cpp
ImCreator/: CMakeLists.txt  ExampleWidgetInfor.h  FileUtil.h  ImCreator.vcxproj  ImCreator.vcxproj.filters  ImCreator_DetailList.h  ImCreator_PageManager.h  ImCreator_main.cpp  ImDesignPanel.h  ImExampleWidget.h  Test1.cpp  Test1.h  TestUI.cpp  TestUI.h  TestUI.imui  TestUI.imui.cpp  TestUI.imui.h  WidgetTreeView.h  imgui.ini  test.cpp  test.imui  test2  test2.imui  test2.imui.cpp  test2.imui.h
ImCreator/Include/: EventBus.h  ExampleWidgetInfor.h  FileUtil.h  ImCreator_DetailList.h  ImCreator_PageManager.h  ImCreator_Projectconfig.h  ImDesignPanel.h  ImExampleWidget.h  WidgetTreeView.h
ImCreator/Src/: ImCreator_main.cpp
ImCreator/cmake/: linux-arm-toolchain.cmake  win64-toolchain.cmake
ImWidget/: .gitignore  CMakeLists.txt  ImBasicWidgetList.h  ImButton.h  ImCanvasPanel.h  ImCheckBox.h  ImColorPicker.h  ImComboBox.h  ImDesignPanel.h  ImExpandableBox.h  ImHorizontalBox.h  ImHorizontalSplitter.h  ImImage.h  ImInputText.h  ImMenuButton.h  ImMultiLineTextBlock.h  ImPanelWidget.h  ImResizableBox.h  ImScrollBox.h  ImScrollingTextList.h  ImSingleLineInputText.h  ImSlider.h  ImSolt.h  ImTextBlock.h  ImUserWidget.h  ImVerticalBox.h  ImVerticalSplitter.h  ImWidget.h  ImWidgetCodeGenerator.h  ImWidgetConfig.h  ImWidgetFactory.cpp  ImWidgetFactory.h  ImWidgetProperty.h  ImWidgetSerializer.h  Install_Dependencies.bat  Install_Deps.sh
ImWidget/Application/: ImApplication.h  ImPiApplication.cpp  ImPiApplication.h  ImWin64Application.cpp  ImWin64Application.h
ImWidget/ImWidget/: ImBasicWidgetDeclaration.h  ImBasicWidgetList.h  ImBorder.h  ImButton.h  ImCanvasPanel.h  ImCheckBox.h  ImColorPicker.h  ImComboBox.h  ImCurve.h  ImDesignPanel.h  ImExpandableBox.h  ImHorizontalBox.h  ImHorizontalSplitter.h  ImImage.h  ImInputText.h  ImMenuButton.h  ImMultiLineTextBlock.cpp  ImPanelWidget.h  ImResizableBox.h  ImScrollBox.h  ImScrollingTextList.h  ImSimpleFigure.h  ImSlider.h  ImSolt.h  ImTextBlock.h  ImUserWidget.h  ImVerticalBox.h  ImVerticalSplitter.h  ImWidget.h  ImWidgetCodeGenerator.h  ImWidgetFactory.cpp  ImWidgetProperty.h  ImWidgetSerializer.h
ImWidget/ImWindows/: ImMenuButton.h
ImWidget/Include/: ImGlobal.h
ImWidget/Include/Application/: ImApplication.h  ImWin64Application.h
ImWidget/Include/ImEvent/: ImDragEvent.h  ImDragObject.h  ImEvent.h  ImEventSystem.h  ImEventType.h  ImFocusEvent.h  ImInputEvent.h  ImKeyEvent.h  ImMouseEvent.h
ImWidget/Include/ImWidget/: ImBasicWidgetList.h  ImBorder.h  ImButton.h  ImCheckBox.h  ImColorPicker.h  ImComboBox.h  ImCurve.h  ImExpandableBox.h  ImFloatInput.h  ImHorizontalBox.h  ImHorizontalSplitter.h  ImInputText.h  ImIntInput.h  ImMenuButton.h  ImMultiLineTextBlock.h  ImScrollBox.h  ImScrollingTextList.h  ImSlider.h  ImUserWidget.h  ImVerticalBox.h  ImVerticalSplitter.h  ImWidget.h  ImWidgetProperty.h
ImWidget/Include/ImWindows/: ImMenuButton.h  ImPageManager.h  ImWindow.h  ImWindowManager.h
ImWidget/Source/: ImGlobal.cpp
ImWidget/Source/Application/: ImApplication.cpp  ImWin64Application.cpp
ImWidget/Source/ImEvent/: ImDragEvent.cpp  ImEventSystem.cpp  ImMouseEvent.cpp
ImWidget/Source/ImWidget/: ImWidget.cpp  ImWidgetFactory.cpp
ImWidget/Source/ImWindows/: ImWindow.cpp  ImWindowManager.cpp
ImWidget/cmake/: ImWidgetConfig.cmake.in
ImWindows/: ImMenuButton.h  ImPageManager.h
Test/LayoutTest0/: LayoutTest0.vcxproj  LayoutTest0.vcxproj.filters  Test_LayoutTest0.cpp
Test/Test0/: Test0.vcxproj  Test0.vcxproj.filters  Test_ButtonTest.cpp
